--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
         <!-- No olvides de añadir el link de tu hoja de estilos -->
-    <link rel="stylesheet" href="styles/style.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/style.css"/>
   </head>
   <body>
-    <header>Esto es el header</header>
-    <main>Esto es el main</main>
+    <header>
+      <img src="../src/images/spotify-logo.png" alt="logo-spotify" width="200" />
+      <nav>
+    
+        <ul class="navegacion">
+          <li><a href="#">Premium</a></li>
+          <li><a href="#">Ayuda</a></li>
+          <li><a href="#">Descargar</a></li>
+          <li><a href="#">Registrarse</a></li>
+        </ul>
+      </nav>
+     </header>
+      <main>Esto es el main</main>
     <footer>Esto es el footer</footer>
 
     
